# whoami_authenticator

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  tailwind.config.js
assets/scripts/: alpinejs_3.13.10.min.js
assets/styles/: styles.css  tailwind_styles-min.css
migrations/: 20240412071811_db_scheme.sql
src/: apps.rs  auth.rs  crypto.rs  email.rs  general.rs  hello.rs  index.rs  main.rs  open_id.rs  openid.rs  signin.rs  signup.rs  users.rs  utils.rs
src/apps/: app.rs  app_list.rs  my_apps.rs
src/auth/: authorized.rs  signin.rs  signout.rs  signup.rs
src/connection/: signin.rs  signup.rs
src/general/: dashboard.rs  go_back.rs  home.rs  message.rs  navbar.rs  public.rs  welcome.rs  whoami.rs
src/openid/: authorize.rs
src/users/: confirm.rs  confirmation.rs  profile.rs
src/utils/: crypto.rs  date_time.rs  email.rs  jwt.rs  mail.rs  time.rs
templates/: base.html  hello.html  index.html  main_page.html  navbar.html  signin.html  signup.html  whoami_page.html
templates/apps/: app.html  app_block.html  app_list.html  app_page.html  my_apps_page.html
templates/auth/: signin.html  signin_page.html  signup.html  signup_page.html
templates/connect/: signin.html  signup.html
templates/connection/: signin.html  signup.html
templates/general/: dashboard_page.html  go_back.html  home.html  logo.html  message.html  message_block.html  navbar.html  navbar_block.html  page_logo.html  welcome.html
templates/users/: confirm.html  confirm_page.html  confirmation.html  profile.html  profile_delete_block.html  profile_page.html  profile_password.html
