[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
lettre = "0.11.6"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.4"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
