[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["cookie"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
lettre = "0.11.6"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["uuid", "chrono"] }
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
